--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <section class="jumbotron text-center">
         <div class="container">
           <h1 class="jumbotron-heading">Project Portfolio</h1>
-          <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+          <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.<br> Need Demo ..? <br> Use Password: demo </p>
           <p>
             <a href="#rj_portfolio_row" class="btn btn-primary my-2">View Portfolio</a>
             <a href="admin.html" class="btn btn-primary my-2">Manage Portfolio</a>
